--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # NEW STEP: Ensure the directory exists before trying to copy files
+      - name: Create target directory on VM
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.AZURE_HOST }}
+          username: ${{ secrets.AZURE_USER }}
+          key: ${{ secrets.AZURE_SSH_KEY }}
+          script: mkdir -p /home/azureuser/node-apps/first-app/production
+
       # This step copies all your files from GitHub to your isolated directory on the VM
       - name: Copy files to Azure VM
         uses: appleboy/scp-action@v0.1.4
@@ -34,4 +43,4 @@ jobs:
             cd /home/azureuser/node-apps/first-app/production
             npm install
             # If the app is already running, restart it. If not, start it for the first time.
-            pm2 restart my-node-backend || pm2 start index.js --name "my-node-backend"
+            pm2 restart my-node-backend-production || pm2 start index.js --name "my-node-backend-production"
