--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # NEW STEP: Ensure the directory exists before trying to copy files
+      - name: Create target directory on VM
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.AZURE_HOST }}
+          username: ${{ secrets.AZURE_USER }}
+          key: ${{ secrets.AZURE_SSH_KEY }}
+          script: mkdir -p /home/azureuser/node-apps/first-app/testing
+
       # This step copies all your files from GitHub to your isolated directory on the VM
       - name: Copy files to Azure VM
         uses: appleboy/scp-action@v0.1.4
